<resources>
    <string name="app_name">SafeSweeper</string>
    <string name="add_boundary">Set Digital Boundary</string>
    <string name="sweeping_boundary">Sweeping Boundary</string>
    <string name="lat1_00_000">Bottom Latitude</string>
    <string name="lat2_00_000">Top Latitude</string>
    <string name="lon1_00_000">Left Longitude</string>
    <string name="lon2_00_000">Right Longitude</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="manual">MANUAL</string>
    <string name="auto">AUTOMATIC</string>
    <string name="showLoc">SHOW LOCATION</string>
    <string name="awkMine">ACKNOWLEDGE MINE</string>
    <string name="setBound">SET BOUNDARIES</string>
    <string name="connection">text</string>
    <string name="input">0</string>
    <string name="connectBlue">Connect Bluetooth</string>
    <string name="turnON">Turn On</string>
    <string name="refresh">Refresh</string>
    <string name="selectDevice">Select Device</string>
    <string name="logo">Logo</string>
    <string name="title">SafeSweeper</string>
    <string name="connect">Connect</string>
    <string name="boundaryBack">Boundary Background</string>
    <string name="ControlHub">Control Hub</string>
    <string name="Map">Map</string>
    <string name="BluetoothHub">Bluetooth Connection</string>
</resources>
