<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/listselect"
        android:contentDescription="@string/boundaryBack" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:elegantTextHeight="true"
        android:text="@string/sweeping_boundary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lat1Txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lat1InputTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="top|start"
            android:ems="10"
            android:hint="@string/lat1_00_000" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lat2Txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/lat1Txt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lat2InputTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="top|start"
            android:ems="10"
            android:hint="@string/lat2_00_000" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lon1Txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/lat2Txt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lon1InputTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="top|start"
            android:hint="@string/lon1_00_000"
            android:ems="10"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lon2Txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/lon1Txt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lon2InputTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="top|start"
            android:hint="@string/lon2_00_000"
            android:ems="10"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/separator"
        android:background="@color/colorAccent"
        android:layout_below="@+id/lon2Txt"/>

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:layout_below="@+id/lon2Txt"/>

    <Button
        android:id="@+id/insertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/separator"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/lon2Txt"/>

</RelativeLayout>